[gd_scene load_steps=4 format=2]

[ext_resource path="res://scene/Policy/Slot.tscn" type="PackedScene" id=1]
[ext_resource path="res://images/styleboxflat/neutral_round.tres" type="StyleBox" id=2]
[ext_resource path="res://script/Policy/MainPanel.gd" type="Script" id=3]

[node name="PolicyTree" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaseContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tree" type="VBoxContainer" parent="BaseContainer"]
margin_right = 954.0
margin_bottom = 1080.0
size_flags_horizontal = 3

[node name="TreePanel" type="CenterContainer" parent="BaseContainer/Tree"]
margin_right = 954.0
margin_bottom = 926.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridPanel" type="GridContainer" parent="BaseContainer/Tree/TreePanel"]
margin_left = 477.0
margin_top = 463.0
margin_right = 477.0
margin_bottom = 463.0

[node name="GlobalInfoPanel" type="VBoxContainer" parent="BaseContainer/Tree"]
margin_top = 930.0
margin_right = 954.0
margin_bottom = 1080.0

[node name="PropelPanel" type="HBoxContainer" parent="BaseContainer/Tree/GlobalInfoPanel"]
margin_right = 954.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
size_flags_horizontal = 5
size_flags_vertical = 5

[node name="PropelTitle" type="Label" parent="BaseContainer/Tree/GlobalInfoPanel/PropelPanel"]
margin_left = 217.0
margin_top = 68.0
margin_right = 258.0
margin_bottom = 82.0
size_flags_horizontal = 6
size_flags_vertical = 6
text = "propel"
align = 1
valign = 1

[node name="PropelSlot" parent="BaseContainer/Tree/GlobalInfoPanel/PropelPanel" instance=ExtResource( 1 )]
margin_left = 656.0
margin_top = 15.0
margin_right = 776.0
margin_bottom = 135.0
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="VSeparator" type="VSeparator" parent="BaseContainer"]
margin_left = 958.0
margin_right = 962.0
margin_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="BaseContainer"]
margin_left = 966.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="BaseContainer/VBoxContainer"]
margin_right = 954.0
margin_bottom = 70.0

[node name="Begin" type="Button" parent="BaseContainer/VBoxContainer/HBoxContainer"]
margin_left = 202.0
margin_right = 272.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 6
size_flags_vertical = 6
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "begin"
expand_icon = true

[node name="Use" type="Button" parent="BaseContainer/VBoxContainer/HBoxContainer"]
margin_left = 681.0
margin_right = 751.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 6
size_flags_vertical = 6
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "use"
expand_icon = true
